--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    
+    <title>SBTPH APP</title>
+   
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.13.4/xlsx.core.min.js"></script>
+    <script  type="application/javascript"  src="<%= BASE_URL %>js/FileSaver.js"></script>
+    <script   type="application/javascript"  src="<%= BASE_URL %>js/jhxlsx.js"></script>
 
   </head>
   <body>
